[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purple-soul"
version = "0.1.4"
description = "A minimalist terminal writing tool for geeks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.0.0",
]

[project.scripts]
purple-soul = "purple_soul:main"

[tool.hatch.build.targets.wheel]
include = ["purple_soul.py"]
