[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purple-soul"
version = "0.2.14"
description = "A minimalist terminal writing tool for geeks"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "thatgameapple"}]
dependencies = [
    "textual>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/thatgameapple/purple-soul"
Repository = "https://github.com/thatgameapple/purple-soul"
Issues = "https://github.com/thatgameapple/purple-soul/issues"

[project.scripts]
purple-soul = "purple_soul:main"

[tool.hatch.build.targets.wheel]
include = ["purple_soul.py"]
